welcome.lessons.welcome.array.search.IndexOfMaxValue.scala.error
indexOfMaxValue:3: error: not found: value num
  var max=num(0);
          ^indexOfMaxValue:8: error: not found: value lookingFor
    if(nums(i)==lookingFor)
                ^